Correct responsivity on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,12 @@
     display: none;
   }
 
+  .navbar_logo {
+    width: 20%;
+    height: auto;
+    padding-right: 1%;
+  }
+
   .logo_text {
     font-size: 1rem;
   }
@@ -340,10 +346,10 @@
 @media screen and (max-width: 768px) {
 
 .section_wrapper {
-  padding-left: 4rem; 
-  padding-right: 4rem;
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-left: 1rem; 
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
 }
 
@@ -486,12 +492,85 @@
 @media screen and (max-width: 768px) {
 
   .about_div {
-    padding-left: 4rem; 
-    padding-right: 4rem; 
+    padding-left: 2rem; 
+    padding-right: 2rem; 
+    top: 50px;
   }
+
+  .about_ball {
+    width: 1rem;
+    height: 1rem;
+  }
+  
+  .about_line {
+    width: 0.15vw;
+    height: 20vh;
+  }
+
+  .about_text h1 {
+    font-size: 2rem;
+  }
+  
+  .about_text p {
+    font-size: 1rem;
+    margin-top: 1.25rem;
+  }
+
+  .intro_sub_title {
+    margin-top: 0;
+  }
+  
+  .intro_title {
+    font-size: 4vh;
+    margin-bottom: 3vh;
+  }
+  
+  .intro_description {
+    font-size: 2vh;
+    margin-bottom: 3vh;
+  }
+  
+  .academic {
+    margin-bottom: 3vh;
+  }
+  
+  .academic_title {
+    font-size: 2.5vh;
+  }
+  
+  .academic_line {
+      height: 0.5vh;  
+  }
+  
+  .academic_description {
+    font-size: 2vh;
+    text-align: justify;
+  }
+  
+  .active {
+    margin-bottom: 3vh;
+    margin-top: 3vh;
+  }
+  
+  .active_title {
+    font-size: 2.5vh;
+  }
+  
+  .active_line {
+      height: 0.5vh;  
+  }
+  
+  .active_description {
+    font-size: 2vh;
+  }
+  
 }
 
 /* Parcours */
+
+#experience {
+  margin-top: 5rem;
+}
 
 .experience_container {
   margin-top: 5rem;
@@ -536,6 +615,25 @@
   color: white;
   font-size: 1.5vh;
   padding-left: 0.25rem;
+}
+
+@media screen and (max-width: 768px) {
+
+  #experience {
+    margin-top: 3vh;
+  }
+  
+  .experience_title {
+    font-size: 2.5vh;
+  }
+  
+  .experience_company_name {
+    font-size: 2.5vh;
+  }
+  
+  .experience_point {
+    font-size: 2vh;
+  }
 }
 
 /* Tech */
@@ -637,9 +735,31 @@
 @media screen and (max-width: 768px) {
 
   
-.projectcard_container {
-  width: 360px;
-}
+  .works_container {
+    margin-top : 3vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .projectcard_container {
+    padding: 0.75rem;
+  }
+
+  .projectcard_bg {
+    position :relative;
+    width: 100%;
+    height: 230px;
+  }
+  
+  .projectcard_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.75rem;
+  }
+
 }
 
 .all_wrapper {
